force-app/main/default/objects/Approval_History__c/fields/Servicer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Contact_Name__c</fullName>
    <label>Servicer Contact Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Servicer_Contact</valueSetName>
    </valueSet>
</CustomField>