force-app/main/default/objects/Approval_History__c/fields/Stepdown_Prepayment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Stepdown_Prepayment_Comment__c</fullName>
    <label>Stepdown Prepayment Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>