force-app/main/default/objects/Approval_History__c/fields/Stepdown_Prepayment_Period__c.field-meta.xml
<CustomField>
    <fullName>Stepdown_Prepayment_Period__c</fullName>
    <label>Stepdown Prepayment Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>