force-app/main/default/objects/Approval_History__c/fields/Yield_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Yield_Maintenance__c</fullName>
    <label>Yield Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>