force-app/main/default/objects/Approval_History__c/fields/Yield_Maintenance_Comment__c.field-meta.xml
<CustomField>
    <fullName>Yield_Maintenance_Comment__c</fullName>
    <label>Yield Maintenance Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>