force-app/main/default/objects/Approval_History__c/fields/YM_Par_Prepayment_Comment__c.field-meta.xml
<CustomField>
    <fullName>YM_Par_Prepayment_Comment__c</fullName>
    <label>YM Par Prepayment Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>