force-app/main/default/objects/Approval_History__c/fields/YM_Par_Prepayment_Period__c.field-meta.xml
<CustomField>
    <fullName>YM_Par_Prepayment_Period__c</fullName>
    <label>YM Par Prepayment Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>