force-app/main/default/objects/Approval_History__c/fields/YM_Prepayment_Penalty_Description__c.field-meta.xml
<CustomField>
    <fullName>YM_Prepayment_Penalty_Description__c</fullName>
    <label>Stepdown Prepayment Period Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>